Added new interface for passwords

--- a/mesonet_demo_colab.ipynb
+++ b/mesonet_demo_colab.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "14ZoP1l75j5tW8fJx4kMu42FA4t2Jq0l0",
-      "authorship_tag": "ABX9TyN5da9LoBXj9Qnvj93PpnhQ",
+      "authorship_tag": "ABX9TyNCRFtFLkymRQFTkn0Zd5LY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,10 +180,38 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ZtdYK-mXbMGI"
+      },
+      "source": [
+        "#@title OSF Username\n",
+        "osf_username = 'brandon.forys@alumni.ubc.ca' #@param {type: \"string\"}\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MmtfK_tFacQT"
+      },
+      "source": [
+        "# Get OSF info\n",
+        "from getpass import getpass\n",
+        "import os\n",
+        "osf_password = getpass('OSF password')\n",
+        "os.environ['OSF_USER'] = osf_username\n",
+        "os.environ['OSF_PASSWORD'] = osf_password"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "_nHcGUo5-RZ6"
       },
       "source": [
-        "!osf -p svztu fetch Landmark_estimation_model/atlas-DongshengXiao-2020-08-03.zip mesonet_inputs/atlas-DongshengXiao-2020-08-03.zip"
+        "!osf -p svztu -u ${OSF_USER} fetch Landmark_estimation_model/atlas-DongshengXiao-2020-08-03.zip mesonet_inputs/atlas-DongshengXiao-2020-08-03.zip"
       ],
       "execution_count": null,
       "outputs": []
@@ -205,7 +233,7 @@
         "id": "OmNgWKOJA4Ou"
       },
       "source": [
-        "!osf -p svztu fetch U-Net_model/DongshengXiao_bundary.hdf5 MesoNet/mesonet/models/DongshengXiao_bundary.hdf5"
+        "!osf -p svztu -u ${OSF_USER} fetch U-Net_model/DongshengXiao_bundary.hdf5 MesoNet/mesonet/models/DongshengXiao_bundary.hdf5"
       ],
       "execution_count": null,
       "outputs": []
