--- a/mesonet_demo_colab.ipynb
+++ b/mesonet_demo_colab.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "14ZoP1l75j5tW8fJx4kMu42FA4t2Jq0l0",
-      "authorship_tag": "ABX9TyNCRFtFLkymRQFTkn0Zd5LY",
+      "authorship_tag": "ABX9TyPyShaBMfDkyvjrpsBjKyyc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -291,6 +291,7 @@
       },
       "source": [
         "import os\n",
+        "# Set up filepaths based on your inputs\n",
         "input_file = os.path.join('/content','mesonet_inputs', input_filename)\n",
         "output_file = os.path.join('/content', output_filename)\n",
         "model = os.path.join('MesoNet', 'mesonet', 'models', model_name)\n",
@@ -374,6 +375,7 @@
         "id": "h_x_r_X2SLXS"
       },
       "source": [
+        "# Set this environment variable to help MesoNet find the git repo location\n",
         "os.environ[\"MESONET_GIT\"]='/content/MesoNet/mesonet/'"
       ],
       "execution_count": null,
@@ -405,7 +407,7 @@
         "id": "C7lCpR53H3EO"
       },
       "source": [
-        "Congratulations, you're all done! You can now check the outputs in the `mesonet_outputs` folder. The segmented brain data can eb found in `mesonet_outputs/output_mask`!"
+        "Congratulations, you're all done! You can now check the outputs in the `mesonet_outputs` folder. The segmented brain data can be found in `mesonet_outputs/output_mask`!"
       ]
     }
   ]
