--- a/mesonet_demo_colab.ipynb
+++ b/mesonet_demo_colab.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "14ZoP1l75j5tW8fJx4kMu42FA4t2Jq0l0",
-      "authorship_tag": "ABX9TyO3IljMZP0afVBqs+4FoNc9",
+      "authorship_tag": "ABX9TyPSOXxuMC9RShHePO6mFWg6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -293,6 +293,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OM1CKImF0OSo"
+      },
+      "source": [
+        "## Configure MesoNet"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "h_x_r_X2SLXS"
@@ -402,6 +411,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jb16iWZm0T9_"
+      },
+      "source": [
+        "## Run MesoNet"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0uR1JWHR0Xa8"
+      },
+      "source": [
+        "### Predict regions"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "5nLe62A-843I",
@@ -453,6 +480,15 @@
       },
       "source": [
         "Lastly, we will identify and use cortical landmarks to align the atlas to the brain:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qdkZHKo70bKX"
+      },
+      "source": [
+        "### Predict landmarks"
       ]
     },
     {
