Updated Colab with five pipelines

--- a/mesonet_demo_colab.ipynb
+++ b/mesonet_demo_colab.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "14ZoP1l75j5tW8fJx4kMu42FA4t2Jq0l0",
-      "authorship_tag": "ABX9TyPme2Dci5hq0iOBisRJ+WWo",
+      "authorship_tag": "ABX9TyOi1XXb5yCCnQox5qS3K/g7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "id": "UWqA1QrmVu5U"
       },
       "source": [
-        "## Prepare inputs"
+        "# Prepare inputs"
       ]
     },
     {
@@ -328,7 +328,7 @@
         "id": "OM1CKImF0OSo"
       },
       "source": [
-        "## Configure MesoNet"
+        "# Configure MesoNet"
       ]
     },
     {
@@ -422,7 +422,7 @@
         "id": "Jb16iWZm0T9_"
       },
       "source": [
-        "## Run MesoNet"
+        "# Run MesoNet"
       ]
     },
     {
@@ -431,7 +431,7 @@
         "id": "K6xYOJczyIUB"
       },
       "source": [
-        "### Pipeline 1: Atlas-to-brain\n",
+        "## Pipeline 1: Atlas-to-brain\n",
         "Firstly, we will identify the outer edges of the cortex:"
       ]
     },
@@ -491,7 +491,198 @@
         "id": "C7lCpR53H3EO"
       },
       "source": [
-        "Congratulations, you're all done with this first pipeline! You can now check the outputs in the `mesonet_output_atlas_brain` folder. The segmented brain data can be found in `mesonet_output_atlas_brain/output_overlay`."
+        "Congratulations, you're all done with this first pipeline! You can now check the outputs in the `mesonet_output_atlas_brain` folder. The segmented brain data can be found in `mesonet_output_atlas_brain/output_overlay`.\n",
+        "\n",
+        "The following four pipelines will follow a similar pattern:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o8Bbzh6wzcCU"
+      },
+      "source": [
+        "## Pipeline 2: Brain-to-atlas\n",
+        "This time, we will directly identify and use cortical landmarks to align the brain to the atlas:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-E778cvgzngw"
+      },
+      "source": [
+        "### Predict landmarks"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C2jjquarzp34"
+      },
+      "source": [
+        "%cd /content/\n",
+        "mesonet.predict_dlc(config_file_brain_atlas)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "74FqIOkDz-Qx"
+      },
+      "source": [
+        "You can now check the outputs in the `mesonet_output_brain_atlas` folder. The segmented brain data can be found in `mesonet_output_brain_atlas/output_overlay`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rkXNc2Ap0Gaw"
+      },
+      "source": [
+        "## Pipeline 3: Atlas-to-Brain + sensory\n",
+        "Now, we return to the Brain-to-Atlas approach while also using peaks of functional activity that are common across animals as a further alignment step."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FxYqk3Qy1K-w"
+      },
+      "source": [
+        "### Predict regions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xgz-lh-w1N8m"
+      },
+      "source": [
+        "%cd /content/\n",
+        "mesonet.predict_regions(config_file_sensory)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v_9tcIor1PH1"
+      },
+      "source": [
+        "### Predict landmarks"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AZC7PQ0c1Q2O"
+      },
+      "source": [
+        "mesonet.predict_dlc(config_file_sensory)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TqdDUZHi1ecN"
+      },
+      "source": [
+        "You can now check the outputs in the `mesonet_output_sensory` folder. The segmented brain data can be found in `mesonet_output_sensory/output_overlay`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yTFM4mFg19eE"
+      },
+      "source": [
+        "## Pipeline 4: MBFM + U-Net\n",
+        "Our input for this pipeline will be a set of motif-based functional maps (MBFMs) - brain images that summarize patterns of spatio-temporal activity that are common across animals. You can generate these using a MATLAB script running [seqNMF](https://github.com/FeeLab/seqNMF) - such a script is available in `4_Data_code/New_end_to_end_code` on our [OSF repository](https://osf.io/svztu/). We will then use a U-Net model to directly segment the brain image into functional regions - no need for atlas registration here!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ogr73HsT29_W"
+      },
+      "source": [
+        "### Predict regions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rmKekkzW3A4o"
+      },
+      "source": [
+        "%cd /content/\n",
+        "mesonet.predict_regions(config_file_MBFM_U_Net)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7FL5w9Zn3IPC"
+      },
+      "source": [
+        "You can now check the outputs in the `mesonet_output_MBFM_U_Net` folder. The segmented brain data can be found in `mesonet_output_MBFM_U_Net/output_overlay`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9Wn10Qar3WxY"
+      },
+      "source": [
+        "## Pipeline 5: VoxelMorph\n",
+        "Our input for this pipeline will be a raw brain image followed by an MBFM (see Pipeline 4 description for details). We will use VoxelMorph - a local deformation technique - to register the MBFM to an atlas based on a template image in the MesoNet repository."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VlR21DdB3yoC"
+      },
+      "source": [
+        "### Predict landmarks"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AA75tW_u336F"
+      },
+      "source": [
+        "mesonet.predict_dlc(config_file_voxelmorph)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z7j9mAAV4AC-"
+      },
+      "source": [
+        "You can now check the outputs in the `mesonet_output_voxelmorph` folder. The segmented brain data can be found in `mesonet_output_voxelmorph/output_overlay`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BjHOCd9f5DgV"
+      },
+      "source": [
+        "# Conclusion\n",
+        "These five pipelines can be directly accessed in the graphical user interface (GUI) that is available for MesoNet for ease of use. Furthermore, you can customize your pipeline by changing the options defined in `mesonet.config_project` for the CLI and in the GUI - you can use our [Quick Start Guide](https://github.com/bf777/MesoNet/wiki/Quick-Start-Guide) and [Config File Guide](https://github.com/bf777/MesoNet/wiki/Config-File-Guide) for guidance."
       ]
     }
   ]
