Added voxelmorph model

--- a/mesonet_demo_colab.ipynb
+++ b/mesonet_demo_colab.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "14ZoP1l75j5tW8fJx4kMu42FA4t2Jq0l0",
-      "authorship_tag": "ABX9TyOi1XXb5yCCnQox5qS3K/g7",
+      "authorship_tag": "ABX9TyOc/cT7Ns96gpocaQjpzy3C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,6 +188,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rnudgt6I6FTx"
+      },
+      "source": [
+        "%cd /content/\n",
+        "!osf -p svztu fetch 8_VoxelMorph_model/VoxelMorph_Motif_based_functional_map_model_transformed1000.h5 mesonet_inputs/oxelMorph_Motif_based_functional_map_model_transformed1000.h5"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "_oGLDOuKtKqI"
@@ -272,7 +284,8 @@
         "output_file_voxelmorph_name = 'mesonet_output_voxelmorph'  #@param {type: \"string\"}\n",
         "\n",
         "model_name = 'DongshengXiao_brain_bundary.hdf5' #@param {type: \"string\"}\n",
-        "dlc_model_name = 'atlas-DongshengXiao-2020-08-03'  #@param {type: \"string\"}"
+        "dlc_model_name = 'atlas-DongshengXiao-2020-08-03'  #@param {type: \"string\"}\n",
+        "voxelmorph_model_name = 'oxelMorph_Motif_based_functional_map_model_transformed1000.h5'  #@param {type: \"string\"}"
       ],
       "execution_count": null,
       "outputs": []
@@ -297,6 +310,7 @@
         "output_file_voxelmorph = os.path.join('/content','mesonet_outputs', output_file_voxelmorph_name)\n",
         "\n",
         "model = os.path.join('/content', 'MesoNet', 'mesonet', 'models', model_name)\n",
+        "voxelmorph_model = os.path.join('/content','mesonet_inputs', voxelmorph_model_name)\n",
         "dlc_config = os.path.join('/content','mesonet_inputs', dlc_model_name, 'config.yaml')"
       ],
       "execution_count": null,
@@ -399,7 +413,7 @@
         "                                                use_unet=False, use_dlc=True, sensory_match=False, mat_save=False, \n",
         "                                                config=dlc_config, model=model, \n",
         "                                                align_once=True, olfactory_check=False, \n",
-        "                                                voxelmorph_model=voxelmorph_model_name)"
+        "                                                voxelmorph_model=voxelmorph_model)"
       ],
       "execution_count": null,
       "outputs": []
