--- a/mesonet_demo_colab.ipynb
+++ b/mesonet_demo_colab.ipynb
@@ -115,12 +115,6 @@
     "# Install MesoNet\n",
     "!pip install .\n",
     "\n",
-    "# Reinstall OpenCV to address compatibility issue\n",
-    "!pip install opencv-python==4.4.0.46\n",
-    "\n",
-    "# Reinstall h5py\n",
-    "!pip install h5py==2.10.0\n",
-    "\n",
     "# pip install mesonet"
    ],
    "execution_count": null,
@@ -132,8 +126,7 @@
     "id": "UlkSR2Y1DMt-"
    },
    "source": [
-    "# Use tensorflow 1.x (supported by DeepLabCut)\n",
-    "# %tensorflow_version 1.x\n",
+    "# Check tensorflow version (Any 2.x should be fine)\n",
     "import tensorflow\n",
     "import os\n",
     "print(tensorflow.__version__)"
@@ -370,7 +363,7 @@
    },
    "source": [
     "# Set this environment variable to help MesoNet find the git repo location\n",
-    "os.environ[\"MESONET_GIT\"]='/content/MesoNet/mesonet/'"
+    "os.environ[\"MESONET_GIT\"]='/content/MesoNet/'"
    ],
    "execution_count": null,
    "outputs": []
